prevent welcome content from bumping off page on smaller screens

--- a/src/app/welcome/welcome.component.scss
+++ b/src/app/welcome/welcome.component.scss
@@ -8,7 +8,7 @@
 @media screen and (max-width: $mobile-max-width) {
     .my-picture {
         display: block;
-        width: 5rem;
+        width: 8rem;
         margin-left: auto; margin-right: auto;
     }
 }
